# agent-teams-with-openviking-restate

./: .env.example  .gitignore  ENGINEERING_GUIDE.md  design.md  pyproject.toml
src/: config.py  main.py
src/agents/: __init__.py  coder.py  manager.py  tester.py
src/infra/: __init__.py  llm.py  ov_client.py  sandbox.py
tests/: test_coder.py  test_config.py  test_integration.py  test_llm.py  test_ov_client.py  test_sandbox.py  test_tester.py
